--- a/extensions/http/pom.xml
+++ b/extensions/http/pom.xml
@@ -44,7 +44,7 @@
 									<destFileName>gwt-user.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
           
 						</configuration>
 					</execution>
@@ -64,7 +64,7 @@
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
           
 						</configuration>
 					</execution>
