--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -49,7 +49,7 @@
                                     <destFileName>javax.xml.soap-api.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
+                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
                             <overWriteIfNewer>true</overWriteIfNewer>
                         </configuration>
                     </execution>
@@ -70,7 +70,7 @@
 
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
+                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
                             <overWriteIfNewer>true</overWriteIfNewer>
                         </configuration>
                     </execution>
