--- a/extensions/sodeps/pom.xml
+++ b/extensions/sodeps/pom.xml
@@ -43,7 +43,7 @@
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
 
 						</configuration>
 					</execution>
