--- a/extensions/xmlrpc/pom.xml
+++ b/extensions/xmlrpc/pom.xml
@@ -42,8 +42,7 @@
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
-
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
