--- a/javaServices/monitorJavaServices/pom.xml
+++ b/javaServices/monitorJavaServices/pom.xml
@@ -85,7 +85,7 @@
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/javaServices</outputDirectory>
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/javaServices</outputDirectory>
 						</configuration>
 					</execution>	
 				</executions>
