--- a/support/jolie-gwt/pom.xml
+++ b/support/jolie-gwt/pom.xml
@@ -71,7 +71,7 @@
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
