--- a/extensions/javascript/pom.xml
+++ b/extensions/javascript/pom.xml
@@ -22,6 +22,18 @@
     <build>
         <finalName>${project.artifactId}.jar</finalName>
         <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>	
+					<archive>
+						<manifestEntries>
+							<X-JOLIE-ProtocolExtension>JavaScript:jolie.embedding.js.JavaScriptServiceLoaderFactory</X-JOLIE-ProtocolExtension>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
