--- a/extensions/rmi/pom.xml
+++ b/extensions/rmi/pom.xml
@@ -24,6 +24,18 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>	
+					<archive>
+						<manifestEntries>
+							<X-JOLIE-ProtocolExtension>rmi:jolie.rmi.RMIListenerFactory</X-JOLIE-ProtocolExtension>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.1</version>
 				<executions>
