--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -21,6 +21,18 @@
     <description>Soap protocol for Jolie.</description>
     <build>
         <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>	
+					<archive>
+						<manifestEntries>
+							<X-JOLIE-ProtocolExtension>sodep:jolie.net.SoapProtocolFactory</X-JOLIE-ProtocolExtension>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
