--- a/extensions/javascript/pom.xml
+++ b/extensions/javascript/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>javascript</name>
-    <description>Javascript protocol for Jolie.</description>
+    <description>Javascript embedding extension for Jolie.</description>
     <build>
         <finalName>${project.artifactId}.jar</finalName>
         <plugins>
@@ -29,7 +29,7 @@
 				<configuration>	
 					<archive>
 						<manifestEntries>
-							<X-JOLIE-ProtocolExtension>JavaScript:jolie.embedding.js.JavaScriptServiceLoaderFactory</X-JOLIE-ProtocolExtension>
+							<X-JOLIE-EmbeddingExtension>JavaScript:jolie.embedding.js.JavaScriptServiceLoaderFactory</X-JOLIE-EmbeddingExtension>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -70,5 +70,4 @@
             <version>${jolie.version}</version>
         </dependency>
     </dependencies>
-  
 </project>
