--- a/jolie/pom.xml
+++ b/jolie/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jolie-lang</groupId>
@@ -17,7 +18,6 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<build>
-       
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -25,14 +25,10 @@
 				<version>2.4</version>
 				<configuration>
 					<archive>
-										<manifest>
-						<mainClass>jolie.Jolie</mainClass>
-					</manifest>
-						
-					     		
-						<manifestFile>MANIFEST.MF</manifestFile>
-						
-        
+						<manifestEntries>
+							<Main-Class>jolie.Jolie</Main-Class>
+							<Class-Path>lib/libjolie.jar</Class-Path>
+						</manifestEntries>
 					</archive>
 				</configuration>
 			</plugin>
@@ -58,7 +54,6 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}</outputDirectory>
-          
 						</configuration>
 					</execution>
 				</executions>
