--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -60,6 +60,13 @@
                                     <type>jar</type>
                                     <destFileName>javax.xml.soap-api.jar</destFileName>
                                 </artifactItem>
+								<artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>xsom</artifactId>
+                                    <version>${jolie.version}</version>
+                                    <type>jar</type>
+                                    <destFileName>xsom.jar</destFileName>
+                                </artifactItem>
                             </artifactItems>
                             <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
                             <overWriteIfNewer>true</overWriteIfNewer>
@@ -79,7 +86,6 @@
                                     <version>${jolie.version}</version>
                                     <type>jar</type>
                                     <destFileName>${project.artifactId}.jar</destFileName>
-
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
@@ -111,6 +117,10 @@
             <artifactId>javax.xml.soap-api</artifactId>
             <version>1.4.0</version>
         </dependency>
-
+		<dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+			<version>1.5.0</version>
+		</dependency>
     </dependencies>
 </project>
