--- a/extensions/btl2cap/pom.xml
+++ b/extensions/btl2cap/pom.xml
@@ -24,6 +24,19 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>	
+					<archive>
+						<manifestEntries>
+							<X-JOLIE-ChannelExtension>btl2cap:jolie.net.BTL2CapChannelFactory </X-JOLIE-ChannelExtension>
+							<X-JOLIE-ListenerExtension>btl2cap:jolie.net.BTL2CapListenerFactory</X-JOLIE-ListenerExtension>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.1</version>
 				<executions>
