--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
 	<parent>
 		<groupId>org.jolie-lang</groupId>
 		<artifactId>distribution</artifactId>
 		<relativePath>../../pom.xml</relativePath>
 		<version>1.0.0</version>
-	</parent>   
+	</parent>
 	<groupId>org.jolie-lang</groupId>
 	<artifactId>coreJavaServices</artifactId>
 	<version>${jolie.version}</version>
@@ -25,7 +25,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
-				<configuration>	
+				<configuration>
 					<archive>
 						<manifestEntries>
 							<Class-Path>lib/jolie.jar lib/libjolie.jar lib/mailapi.jar lib/smtp.jar lib/jolie-xml.jar lib/ini4j.jar lib/c3p0-0.9.1.1.jar lib/smack.jar lib/smackx.jar lib/wsdl4j.jar lib/xsom.jar lib/commons-lang3.jar lib/http.jar lib/jolie-js.jar lib/uri-templates.jar lib/quartz-2.2.1.jar lib/quartz-jobs-2.2.1.jar lib/slf4j-api-1.6.6.jar lib/javax.activation.jar lib/joda-time.jar</Class-Path>
@@ -33,49 +33,6 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<echo>Displaying value of 'testproperty' property</echo>
-								<echo>[basedir] ${basedir}</echo>
-							</tasks>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${jolie.installation.directory}/</outputDirectory>
-							<resources>          
-								<resource>
-									<directory>../include</directory>
-									<filtering>true</filtering>
-								</resource>
-							</resources>              
-						</configuration>                     
-					</execution>
-				</executions>
-			</plugin>
-            
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -208,7 +165,6 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib/jaxws</outputDirectory>
-          
 						</configuration>
 
 					</execution>
@@ -258,7 +214,7 @@
 								<artifactItem>
 									<groupId>org.quartz-scheduler</groupId>
 									<artifactId>quartz-jobs</artifactId>
-									<version>2.2.1</version>	
+									<version>2.2.1</version>
 									<type>jar</type>
 									<destFileName>quartz-jobs-2.2.1.jar</destFileName>
 								</artifactItem>
@@ -380,7 +336,7 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
-          
+
 						</configuration>
 
 					</execution>
@@ -403,12 +359,12 @@
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/javaServices</outputDirectory>
 						</configuration>
 					</execution>
-				
+
 				</executions>
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -531,7 +487,7 @@
 			<artifactId>jaxp-api</artifactId>
 			<version>1.4.2</version>
 		</dependency>
-    
+
 		<dependency>
 			<groupId>com.sun.xml.fastinfoset</groupId>
 			<artifactId>FastInfoset</artifactId>
@@ -618,8 +574,5 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.9.4</version>
 		</dependency>
-
-
-
 	</dependencies>
 </project>
