--- a/extensions/auto/pom.xml
+++ b/extensions/auto/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.jolie-lang</groupId>
 		<artifactId>distribution</artifactId>
@@ -10,6 +11,7 @@
 	</parent>
 	<groupId>org.jolie-lang</groupId>
 	<artifactId>auto</artifactId>
+	<name>auto</name>
 	<version>${jolie.version}</version>
 	<packaging>jar</packaging>
 	<properties>
@@ -17,11 +19,23 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	<name>auto</name>
 	<description>Auto protocol for Jolie</description>
 	<build>
 		<finalName>${project.artifactId}.jar</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<X-JOLIE-ChannelExtension>auto:jolie.net.auto.AutoChannelFactory</X-JOLIE-ChannelExtension>
+							<X-JOLIE-ListenerExtension>auto:jolie.net.auto.AutoListenerFactory</X-JOLIE-ListenerExtension>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -44,7 +58,6 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
-          
 						</configuration>
 					</execution>
 					<execution>
@@ -64,7 +77,6 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
-          
 						</configuration>
 					</execution>
 				</executions>
@@ -82,6 +94,5 @@
 			<artifactId>ini4j</artifactId>
 			<version>0.5.4</version>
 		</dependency>
-
 	</dependencies>
 </project>
