WS-Test missing project
Former-commit-id: 9feb7a01697fdf71c90641de16f4edb661c47d56

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ build/
 /tools/joliedoc/target/
 /javaServices/monitorJavaServices/nbproject/private/
 /javaServices/monitorJavaServices/target/
+/test/extensions/private/WS-test/target/
