Cleaning ws-test

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,4 @@
-dist/
-build/
-/jolie/.idea/workspace.xml
-/jolie/.idea/tasks.xml
-/libjolie/target/
-/jolie/target/
-/javaServices/coreJavaServices/target/
-/lib/jolie-js/target/
-/lib/jolie-ssl/target/
-/lib/jolie-xml/target/
-/extensions/auto/target/
-/extensions/btl2cap/target/
-/extensions/http/target/
-/support/jolie-gwt/target/
-/extensions/sodep/target/
-/support/jolie-java/target/
-/support/metaservice-java/target/
-/extensions/https/target/
-/lib/xsom/target/
-/extensions/javascript/target/
-/extensions/local/target/
-/extensions/jsonrpc/target/
-/extensions/localsocket/target/
-/extensions/rmi/target/
-/extensions/soap/target/
-/extensions/soaps/target/
-/extensions/sodeps/target/
-/extensions/xmlrpc/target/
-/tools/jolie2dummy/target/
-/tools/jolie2java/target/
-/tools/jolie2surface/target/
-/tools/jolie2plasma/target/
-/tools/jolie2wsdl/target/
-/tools/joliec/target/
-/tools/joliedoc/target/
-/javaServices/monitorJavaServices/nbproject/private/
-/javaServices/monitorJavaServices/target/
-/test/extensions/private/WS-test/target/
+**/dist/
+**/build/
+**/target/
+test/extensions/private/WS-test.jar
