Add ws-test module to test pom

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -42,6 +42,9 @@
 			</properties>
 		</profile>
 	</profiles>
+	<modules>
+		<module>extensions/private/WS-test</module>
+	</modules>
 	<build>
 		<plugins>
 			<plugin>
