--- a/pom.xml
+++ b/pom.xml
@@ -76,13 +76,27 @@
 		<module>tools/joliedoc</module>
 		<module>javaServices/coreJavaServices</module>
 		<module>javaServices/monitorJavaServices</module>
-		<module>test/extensions/private/WS-test</module>
 		<module>launchers</module>
 		<module>test</module>
 	</modules>
 
 	<build>
 		<plugins>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.4.1</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>dist</directory>
+							<includes>
+								<include>**</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
 			<plugin>
 				<inherited>false</inherited>
 				<artifactId>maven-resources-plugin</artifactId>
