--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -73,13 +73,13 @@
                                 <artifactItem>
                                     <groupId>com.sun.xml.ws</groupId>
                                     <artifactId>rt</artifactId>
-                                    <version>2.3.1</version>
+                                    <version>2.3.0</version>
                                     <destFileName>rt.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.glassfish.jaxb</groupId>
                                     <artifactId>jaxb-runtime</artifactId>
-                                    <version>2.3.1</version>
+                                    <version>2.3.0</version>
                                     <destFileName>jaxb-runtime.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -103,7 +103,7 @@
                                 <artifactItem>
                                     <groupId>org.glassfish.external</groupId>
                                     <artifactId>management-api</artifactId>
-                                    <version>3.0.0-b012</version>
+                                    <version>3.2.0-b001</version>
                                     <destFileName>management-api.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -145,19 +145,19 @@
                                 <artifactItem>
                                     <groupId>com.sun.xml.messaging.saaj</groupId>
                                     <artifactId>saaj-impl</artifactId>
-                                    <version>1.5.0</version>
+                                    <version>1.5.1</version>
                                     <destFileName>saaj-impl.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>javax.xml.ws</groupId>
                                     <artifactId>jaxws-api</artifactId>
-                                    <version>2.3.1</version>
+                                    <version>2.3.0</version>
                                     <destFileName>jaxws-api.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>javax.xml.bind</groupId>
                                     <artifactId>jaxb-api</artifactId>
-                                    <version>2.3.1</version>
+                                    <version>2.4.0-b180830.0359</version>
                                     <type>jar</type>
                                     <destFileName>jaxb-api.jar</destFileName>
                                 </artifactItem>
@@ -174,10 +174,9 @@
                                     <destFileName>javax.jws-api.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>org.glassfish.jaxb</groupId>
-                                    <groupId>javax.xml</groupId>
+                                    <groupId>com.sun.xml.bind</groupId>
                                     <artifactId>jaxb-impl</artifactId>
-                                    <version>2.1</version>
+                                    <version>2.4.0-b180830.0438</version>
                                     <destFileName>jaxb-impl.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -190,7 +189,7 @@
                                 <artifactItem>
                                     <groupId>com.sun.xml.ws</groupId>
                                     <artifactId>jaxws-rt</artifactId>
-                                    <version>2.1.4</version>
+                                    <version>2.3.0</version>
                                     <destFileName>jaxws-rt.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -204,6 +203,13 @@
                                     <artifactId>woodstox-core-asl</artifactId>
                                     <version>4.2.0</version>
                                     <destFileName>woodstox-core-asl.jar</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.txw2</groupId>
+                                    <artifactId>txw2</artifactId>
+                                    <version>20110809</version>
+                                    <type>jar</type>
+                                    <destFileName>txw2.jar</destFileName>
                                 </artifactItem>
                           
                             </artifactItems>
@@ -242,21 +248,20 @@
                                 <artifactItem>
                                     <groupId>com.sun.xml.messaging.saaj</groupId>
                                     <artifactId>saaj-impl</artifactId>
-                                    <version>1.5.0</version>
+                                    <version>1.5.1</version>
                                     <destFileName>saaj-impl.jar</destFileName>
                                 </artifactItem>                              
                                 <artifactItem>
                                     <groupId>javax.xml.bind</groupId>
                                     <artifactId>jaxb-api</artifactId>
-                                    <version>2.3.1</version>
+                                    <version>2.4.0-b180830.0359</version>
                                     <type>jar</type>
                                     <destFileName>jaxb-api.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>org.glassfish.jaxb</groupId>
-                                    <groupId>javax.xml</groupId>
+                                    <groupId>com.sun.xml.bind</groupId>
                                     <artifactId>jaxb-impl</artifactId>
-                                    <version>2.1</version>
+                                    <version>2.4.0-b180830.0438</version>
                                     <destFileName>jaxb-impl.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -388,7 +393,7 @@
                                 <artifactItem>
                                     <groupId>org.glassfish.external</groupId>
                                     <artifactId>management-api</artifactId>
-                                    <version>3.0.0-b012</version>
+                                    <version>3.2.0-b001</version>
                                     <destFileName>management-api.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -402,6 +407,20 @@
                                     <artifactId>javax.activation</artifactId>
                                     <version>1.2.0</version>
                                     <destFileName>javax.activation.jar</destFileName>
+                                </artifactItem>                            
+                                <artifactItem>
+                                    <groupId>org.apache.commons</groupId>
+                                    <artifactId>commons-lang3</artifactId>
+                                    <version>3.0</version>
+                                    <type>jar</type>
+                                    <destFileName>commons-lang3.jar</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.xml.txw2</groupId>
+                                    <artifactId>txw2</artifactId>
+                                    <version>20110809</version>
+                                    <type>jar</type>
+                                    <destFileName>txw2.jar</destFileName>
                                 </artifactItem>
                                 
                             </artifactItems>   
@@ -538,17 +557,23 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
+            <version>2.4.0-b180830.0359</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-core</artifactId>
             <version>2.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>txw2</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <groupId>javax.xml</groupId>
+            <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.1</version>
+            <version>2.4.0-b180830.0438</version>
         </dependency>
         <dependency>
             <groupId>javax.xml</groupId>
@@ -585,12 +610,22 @@
         <dependency>
             <groupId>javax.xml.ws</groupId>
             <artifactId>jaxws-api</artifactId>
-            <version>2.3.1</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-rt</artifactId>
-            <version>2.1.4</version>
+            <version>2.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jvnet.staxex</groupId>
+                    <artifactId>stax-ex</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>javax.jws</groupId>
@@ -600,17 +635,23 @@
         <dependency>
             <groupId>org.glassfish.external</groupId>
             <artifactId>management-api</artifactId>
-            <version>3.0.0-b012</version>
+            <version>3.2.0-b001</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>policy</artifactId>
             <version>2.7.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>txw2</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.messaging.saaj</groupId>
             <artifactId>saaj-impl</artifactId>
-            <version>1.5.0</version>
+            <version>1.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.woodstox</groupId>
@@ -620,12 +661,18 @@
         <dependency>
             <groupId>org.jvnet.staxex</groupId>
             <artifactId>stax-ex</artifactId>
-            <version>1.8</version>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.stream.buffer</groupId>
             <artifactId>streambuffer</artifactId>
             <version>1.5.6</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jvnet.staxex</groupId>
+                    <artifactId>stax-ex</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.codehaus.woodstox</groupId>
@@ -640,13 +687,14 @@
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>rt</artifactId>
-            <version>2.3.1</version>
+            <version>2.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jvnet.staxex</groupId>
+                    <artifactId>stax-ex</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        <!--dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>txw2</artifactId>
-            <version>2.4.0-b180608.0325</version>
-        </dependency-->
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>javax.activation-api</artifactId>
@@ -661,7 +709,17 @@
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.1</version>
+            <version>2.3.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jvnet.staxex</groupId>
+                    <artifactId>stax-ex</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>txw2</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.sun.istack</groupId>
@@ -671,7 +729,7 @@
         <dependency>
             <groupId>org.jvnet.mimepull</groupId>
             <artifactId>mimepull</artifactId>
-            <version>1.9.10</version>
+            <version>1.9.11</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.woodstox</groupId>
@@ -683,6 +741,10 @@
             <artifactId>javax.jws-api</artifactId>
             <version>1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.sun.xml.txw2</groupId>
+            <artifactId>txw2</artifactId>
+            <version>20110809</version>
+        </dependency>
     </dependencies>
 </project>
