soaps protocol manifest error corrected
Former-commit-id: 327cb3858975464f0605789c1d5c5c0bae96d733

--- a/extensions/soaps/pom.xml
+++ b/extensions/soaps/pom.xml
@@ -54,7 +54,7 @@
 									<destFileName>${project.artifactId}.jar</destFileName>	
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
+							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
 							
 						</configuration>
 					</execution>
