bug fix in jolie2java and added junit test into pom
Former-commit-id: e16cb0e96dcc9fde98df2765af09f3f128e10c2a

--- a/tools/jolie2java/pom.xml
+++ b/tools/jolie2java/pom.xml
@@ -20,6 +20,14 @@
 	<name>jolie2java</name>
 	<description>Tool to generate java project from Jolie interface</description>
 	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+
+		<testResources>
+			<testResource>
+				<directory>resources</directory>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -55,6 +63,25 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie</artifactId>
 			<version>${jolie.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jolie</groupId>
+			<artifactId>sodep</artifactId>
+			<version>1.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jolie</groupId>
+			<artifactId>jolie-java</artifactId>
+			<version>1.8.1</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
