Refactoring of Joliedoc (#202)
* added documentation in metajolie and solved bug in parser when documenting operations

* wip

* bug fix

* modified pom

* wip

* bug fix in reading documentation for included files

* wip

* port description done

* creating index, wip

* bug fix in getMetaData operation

* wip

* added getOutputPortMetaData and picture in joliedoc, wip

* microservice picture done

* added dependency list

* bug fix

* done

* bug fix

* bug fix in css


Former-commit-id: f9e6b3c04e0e01c7de2f1c536d5acd1abe882cc2

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,6 @@
 		<module>tools/jolie2surface</module>
 		<module>tools/jolie2wsdl</module>
 		<module>tools/joliec</module>
-		<module>tools/joliedoc</module>
 		<module>javaServices/coreJavaServices</module>
 		<module>javaServices/monitorJavaServices</module>
 		<module>launchers</module>
@@ -187,6 +186,25 @@
 									<directory>${basedir}/tools/openapi2jolie</directory>
 									<includes>
 										<include>openapi2jolie.ol</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+          <execution>
+						<id>copy-joliedoc</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/${jolie.installation.directory}/tools</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/tools/joliedoc</directory>
+									<includes>
+										<include>joliedoc.ol</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
