Deployment configuration for libjolie
Former-commit-id: ff1e1a5c2025d0723fc738b5304b29993b4e07c7

--- a/libjolie/pom.xml
+++ b/libjolie/pom.xml
@@ -55,4 +55,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Jolie Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/jolie/jolie</url>
+		</repository>
+	</distributionManagement>
 </project>
