added support for deployment on github package
Former-commit-id: 9fcde0f4a9b9b5358f704907077bf528613314ec

--- a/support/jolie-java/pom.xml
+++ b/support/jolie-java/pom.xml
@@ -62,4 +62,11 @@
             <version>${jolie.version}</version>
         </dependency>
     </dependencies>
+    <distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Jolie Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/jolie/jolie</url>
+		</repository>
+	</distributionManagement>
 </project>
