--- a/lib/jolie-js/pom.xml
+++ b/lib/jolie-js/pom.xml
@@ -70,6 +70,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Jolie Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/jolie/jolie</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
