--- a/lib/jolie-xml/pom.xml
+++ b/lib/jolie-xml/pom.xml
@@ -91,4 +91,11 @@
 		</dependency>
 
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Jolie Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/jolie/jolie</url>
+		</repository>
+	</distributionManagement>
 </project>
