Update Dockerfile.jre-alpine to Maven

--- a/docker/Dockerfile.jre
+++ b/docker/Dockerfile.jre
@@ -2,18 +2,19 @@ FROM openjdk:alpine as JolieBuild
 
 # Download and install Jolie. We need it for running the release tools.
 RUN apk update
-RUN apk add apache-ant
-RUN apk add git
+RUN apk add git maven
 RUN git clone --depth=1 https://github.com/jolie/jolie.git jolie-git
 WORKDIR /jolie-git
-RUN ant dist-install
+RUN mvn clean install
+RUN cp -avr /jolie-git/dist/jolie/ /usr/lib/jolie/
+RUN cp -a /jolie-git/dist/launchers/unix/.  /usr/bin/
 ENV JOLIE_HOME /usr/lib/jolie
 
 # Download and use the release tools to generate jolie_installer.jar
 WORKDIR /
 RUN git clone --depth=1 https://github.com/jolie/release_tools.git
 WORKDIR /release_tools/jolie_installer
-RUN ant jar
+RUN mvn clean install
 WORKDIR /release_tools
 RUN apk add zip
 RUN jolie release.ol ../jolie-git
