--- a/docker/Dockerfile.jre
+++ b/docker/Dockerfile.jre
@@ -21,6 +21,7 @@ RUN jolie release.ol ../jolie-git
 
 # Start from scratch, copy the installer, install, remove the installer.
 FROM openjdk:jre-alpine
+RUN apk add zip
 WORKDIR /
 COPY --from=JolieBuild /release_tools/release/jolie_installer.jar .
 RUN java -jar jolie_installer.jar -jh /usr/lib/jolie -jl /usr/bin && rm jolie_installer.jar
